--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>github-com-twbs-bootstrap</artifactId>
+            <version>5.1.3</version>
+        </dependency>
     </dependencies>
 
     <build>
